Move the Apache-licensed Java code of "non-free" modules from SVN repository. It does not include the EPSG data, which are subject to EPSG terms of use.